--- a/web/style.css
+++ b/web/style.css
@@ -249,6 +249,8 @@ table{
     width: 100%;
     border: 1px solid;
     background: #451F0C;
+    margin-left:20px;
+    margin-right:20px;
 }
 svg{
     background:white;
